[gd_scene load_steps=10 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]
[ext_resource path="res://Story0.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 976.0
margin_bottom = 474.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
text = "Placeholder text"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 478.0
margin_right = 976.0
margin_bottom = 552.0
custom_constants/separation = 12
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 890.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 74 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="PlayerButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 902.0
margin_right = 976.0
margin_bottom = 74.0
rect_min_size = Vector2( 74, 74 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="ButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer/PlayerButton"]
margin_left = 12.0
margin_top = 17.0
margin_right = 64.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OK
"
align = 1

[node name="Storybook" type="Node" parent="."]
editor/display_folded = true

[node name="Story0" type="Node" parent="Storybook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "Name", "Place", "Action" )
story = "Hey, %s Wanna head down to %s and %s"

[node name="Story1" type="Node" parent="Storybook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "Name", "Object", "Adverb", "Adjective" )
story = "%s ate a %s flavored sandwich it tasted %s, they had a %s day"

[node name="Story2" type="Node" parent="Storybook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "A name", "a place", "an action", "an adjective" )
story = "Holy snikies! It's %s Hero of %s with the ability to %s hes the %s!"
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayerButton" to="." method="_on_PlayerButton_pressed"]
